@@ -55,7 +55,7 @@ in the source distribution for its full text.
 #endif
 
 #ifndef PER_PROCESSOR_FIELDS
-#define PER_PROCESSOR_FIELDS 20
+#define PER_PROCESSOR_FIELDS 22
 #endif
 
 
@@ -80,6 +80,7 @@ typedef struct ProcessList_ {
    unsigned long long int* userTime;
    unsigned long long int* systemTime;
    unsigned long long int* systemAllTime;
+   unsigned long long int* idleAllTime;
    unsigned long long int* idleTime;
    unsigned long long int* niceTime;
    unsigned long long int* ioWaitTime;
@@ -90,6 +91,7 @@ typedef struct ProcessList_ {
    unsigned long long int* userPeriod;
    unsigned long long int* systemPeriod;
    unsigned long long int* systemAllPeriod;
+   unsigned long long int* idleAllPeriod;
    unsigned long long int* idlePeriod;
    unsigned long long int* nicePeriod;
    unsigned long long int* ioWaitPeriod;
@@ -117,7 +119,7 @@ typedef struct ProcessList_ {
    bool treeView;
    bool highlightBaseName;
    bool highlightMegabytes;
-   bool expandSystemTime;
+   bool detailedCPUTime;
    #ifdef DEBUG_PROC
    FILE* traceFile;
    #endif
